Define Fine properties
